@startuml

title __WORKLOAD's Class Diagram__\n

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      class DynamicMultiPatternWorkloadManager {
          - currentWorkload : List<Pattern>
          - reservedWorkload : List<Pattern>
          - workloadModificationProbability : Double
          + DynamicMultiPatternWorkloadManager()
          + getCurrentWorkload()
          + tryAlterWorkload()
          - insertRandomPattern()
          - removeRandomPattern()
          - moveRandomPattern()
      }
    }
  }
  

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      interface IWorkloadManager {
          {abstract} + getCurrentWorkload()
          {abstract} + getAllEventTypes()
          {abstract} + getMaxTimeWindow()
          {abstract} + tryAlterWorkload()
      }
    }
  }
  

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      class MultiPatternWorkloadManager {
          # patterns : List<Pattern>
          + MultiPatternWorkloadManager()
          + getCurrentWorkload()
          + getAllEventTypes()
          + getMaxTimeWindow()
          + tryAlterWorkload()
      }
    }
  }
  

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      class PatternWorkloadFactory {
          {static} - createEventTypesManager()
          {static} - preprocessPatternSpecification()
          {static} - createPattern()
          {static} - createPatternByType()
          {static} + createPatternWorkload()
      }
    }
  }
  

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      class SinglePatternWorkloadManager {
          - sase.pattern : Pattern
          + SinglePatternWorkloadManager()
          + getCurrentWorkload()
          + getAllEventTypes()
          + getMaxTimeWindow()
          + tryAlterWorkload()
      }
    }
  }
  

  package sase.sase.pattern {
    package sase.sase.pattern.workload {
      enum WorkloadManagerTypes {
        SINGLE
        MULTI_STATIC
        MULTI_DYNAMIC
      }
    }
  }
  

  DynamicMultiPatternWorkloadManager -up-|> IWorkloadManager
  MultiPatternWorkloadManager -up-|> IWorkloadManager
  SinglePatternWorkloadManager -up-|> IWorkloadManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
